linkchecker 7.x-dev, nightly
----------------------------

* #1880652: Refactor _linkchecker_parse_fields() and _linkchecker_replace_fields() to be less expensive, see #1040790 for more details.
* #1875602: Check URL fragment identifiers in content
* Minor code style fixes

linkchecker 7.x-1.0, December 24, 2012
--------------------------------------

* Fixed some typos.
* #1850210: Autorepair may run out of memory by loading all nodes/comments at once.
* #1210606: Limited argument length in entity_load() and other functions.
* Upgraded outdated HTTP user agents.
* #380052: Add support with non-blocking parallel link checking.
* #1867460: Prevent save on automatic updates, if content has not changed.
* #1804842 follow up: Exit if all node types are disabled
* #1450672: Cron task does not impersonate to admin user on automatic content updates.
* Remove documentation leftover from readme about a setting not available.
* #1727552: Notice: Undefined property: stdClass::$language in linkchecker_parse_fields(). Core follow up of #1495648: Introduce entity language support
* Notice: Undefined variable: is_https in _linkchecker_extract_links()
* #1804842: Lots of warnings when comment/block modules are not installed
* Set full HTML format in block test
* Added interface tests to verify drupal_set_message()
* #1857620: hook_form_alter() fails on BASE_FORM_ID 'comment_form'
* #1811908: Allow extracting protocol relative url's
* #1831630: Array being presented to Status report page
* #1441574: Port D6 access bypass bugfixes to D7.
* #1678812: Notice: Undefined property: stdClass::$module in _linkchecker_add_block_custom_links()
* #1678812: Refactored blocks extraction/replacement
* #1678812: Added linkchecker_block_custom_block_get() for a more consistent block_custom object.
* #1586022: linkchecker generating bad User-Agent string
* Status code 500 on HEAD/GET does not increase fail_count
* #1524732: Notice on blocks save / Blocks body cannot exists
