@@ -1,6 +1,7 @@
 linkchecker 7.x-dev, nightly
 ----------------------------
 
+* Fixed a test to use LANGUAGE_NONE constant.
 * #1880652: Refactor _linkchecker_parse_fields() and _linkchecker_replace_fields() to be less expensive, see #1040790 for more details.
 * #1875602: Check URL fragment identifiers in content
 * Minor code style fixes
